fix overflow bug in recent conversations

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -36,8 +36,11 @@
   }
 
   .app-conversation-list {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
     width: 100%;
-    height: 100%;
   }
 
   .container-section-3 {
